# m2s_gl_bench

./: README  README.md  configure.ac  test
src/: Makefile.am  Makefile.in
src/.deps/: gl_solid_triangle.Po
src/gl_smooth_triangle/: Makefile.am  Makefile.in  gl_smooth_triangle.c
src/gl_smooth_triangle_single_light/: Makefile.am  Makefile.in  gl_smooth_triangle_single_light.c
src/gl_smooth_triangles_overlap/: Makefile.am  Makefile.in  gl_smooth_triangles_overlap.c
src/gl_smooth_triangles_overlap_lights/: Makefile.am  Makefile.in  gl_smooth_triangles_overlap_lights.c
src/gl_solid_triangle/: Makefile.am  Makefile.in  gl_solid_triangle.c
src/gl_solid_triangle_single_light/: Makefile.am  Makefile.in  gl_solid_triangle_single_light.c
src/gl_solid_triangles_overlap/: Makefile.am  Makefile.in  gl_solid_triangles_overlap.c
src/gl_solid_triangles_overlap_lights/: Makefile.am  Makefile.in  gl_solid_triangles_overlap_lights.c
src/glsl_smooth_triangle/: Makefile.am  Makefile.in  glsl_smooth_triangle.c
src/glsl_smooth_triangles_overlap/: Makefile.am  Makefile.in  glsl_smooth_triangles_overlap.c
src/glsl_solid_triangle/: Makefile.am  Makefile.in  glsl_solid_triangle.c
src/glsl_solid_triangles_overlap/: Makefile.am  Makefile.in  glsl_solid_triangles_overlap.c
