SUBDIRS = \
	gl_solid_triangle \
	gl_solid_triangle_single_light \
	gl_solid_triangles_overlap \
	gl_solid_triangles_overlap_lights \
	gl_smooth_triangle \
	gl_smooth_triangle_single_light \
	gl_smooth_triangles_overlap \
	gl_smooth_triangles_overlap_lights \
	glsl_solid_triangle \
	glsl_solid_triangles_overlap \
	glsl_smooth_triangle \
	glsl_smooth_triangles_overlap
	